src/css/custom.css
/* ... */
/********** General and Landing page ************/

.navbar__logo img {
  margin-bottom: 0%;
  height: 110%;
  margin-top: -6px;
}

.navbar {
  border-bottom: 1px solid var(--n4c-navbar-border);
}

.main-wrapper {
  display: flex;
}

.hero {
  padding: 2rem 0;
  text-align: center;
  width: 100%;
  overflow: hidden;
  --ifm-hero-background-color: var(--ifm-color-primary);
  --ifm-hero-text-color: var(--ifm-color-white);
  background-image: url('/img/Background.png'), url('/img/Background_right.png');
  background-repeat: no-repeat;
  background-position: left top, right top;
}

@media screen and (max-width: 966px) {
  .hero {
    padding: 2rem;
    background-image: url('/img/Background.png');
    background-repeat: no-repeat;
    background-position: left top, right top;
  }
}

.hero__container {
  position: center;
  width: 100%;
}

.hero__title {
  color: var(--ifm-hero-text-color);
  text-align: left;
  font-size: 2.5rem;
}

.hero__subtitle {
  font-size: 1.2rem;
}

.footer__link-item {
  color: var(--ifm-footer-link-color);
  line-height: 2;
  font-weight: unset;
}

.footer--dark {
  --ifm-footer-background-color: var(--ifm-color-primary);
  --ifm-footer-color: var(--ifm-footer-link-color);
  --ifm-footer-link-color: var(--ifm-color-white);
  --ifm-footer-title-color: var(--ifm-color-white);
  font-weight: unset;
  border-top: 1px solid white;
}

.footer__title {
color: var(--ifm-footer-title-color);
font: bold var(--ifm-h3-font-size)/var(--ifm-heading-line-height) var(--ifm-font-family-base);    
margin-bottom: var(--ifm-heading-margin-bottom);
}

/* N4C Feature styles */

.features {
  align-items: center;
  padding: 2px;
  width: 100%;
}

.featureSvg {
  padding: 2px;
  width: 110px;
  height: 110px;
  margin-top: 5px;
}

.feature__col {
  display: flex;
  width: var(--n4c-col-width);
  /* height: var(--n4c-button-height); */
  padding: var(--n4c-button-vpad) var(--n4c-button-hpad);
  align-items: center;
  justify-content: center;
}

.intro__col {
  display: flex;
  width: var(--n4c-col-width);
  /* height: var(--n4c-button-height); */
  padding: var(--n4c-button-vpad) var(--n4c-button-hpad);
  align-items: center;
  justify-content: left;
}

.feature__button {
  width: var(--n4c-button-width);
  padding: var(--n4c-button-vpad) var(--n4c-button-hpad);
}

.feature__button--secondary {
  width: var(--n4c-button-secondary-width);
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.heroBanner {
  padding: 2rem 0;
  text-align: center;
  position: center;
  overflow: hidden;
  --ifm-hero-background-color: var(--ifm-color-primary);
  --ifm-hero-text-color: var(--ifm-color-white);
}

@media screen and (max-width: 966px) {
  .heroBanner {
    padding: 2rem;
  }
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

/*  .button--primary {
   --ifm-button-border-color: white; 
} */



.button--primary:hover {
  /* --ifm-button-background-color: var(--ifm-color-danger); */
  /* --ifm-button-border-color: white; */
  transform: scale(var(--n4c-hover-scale));
  transition: transform var(--n4c-transform-time) ease-in-out;
}

.button.button--secondary {
  color: var(--ifm-color-primary);
  --ifm-button-background-color: white;
  --ifm-button-border-color: var(--ifm-color-primary);
}

.button--secondary:hover {
  /*   --ifm-button-background-color: var(--ifm-color-danger); */
    transform: scale(var(--n4c-hover-scale));
    transition: transform var(--n4c-transform-time) ease-in-out;
}
  

.button.button--secondary h1,
.button.button--secondary h2,
.button.button--secondary h3,
.button.button--secondary h4,
.button.button--secondary h5,
.button.button--secondary h6,
.button.button--secondary a {
  color: var(--ifm-color-primary);
  text-align: left;
  white-space: normal;
  word-wrap: break-word;
}

.button.button--secondary li,
.button.button--secondary em
 {
  color: var(--ifm-color-primary);
  text-align: left;
  font-weight: 400;
  white-space: normal;
  word-wrap: break-word;
}

.button.button--primary {
  color: var(--ifm-color-white);
}

.button.button--primary h1,
.button.button--primary h2,
.button.button--primary h3,
.button.button--primary h4,
.button.button--primary h5,
.button.button--primary h6 {
  color: white;
  text-align: left;
  white-space: normal;
  word-wrap: break-word;
}

.button.button--primary li,
.button.button--primary em
 {
  color: var(--ifm-color-white);
  text-align: left;
  font-weight: 400;
  white-space: normal;
  word-wrap: break-word;
}


.button--negative {
  --ifm-button-background-color: var(--ifm-color-white);
  border-radius: 10px;
  color: var(--ifm-color-primary);
  font-weight: 400;
}

.button--negative:hover {
/*   --ifm-button-background-color: var(--ifm-color-danger); */
  transform: scale(var(--n4c-hover-scale));
  transition: transform var(--n4c-transform-time) ease-in-out;
}

.button.button--negative h1,
.button.button--negative h2,
.button.button--negative h3,
.button.button--negative h4,
.button.button--negative h5,
.button.button--negative h6,
.button.button--negative a {
  color: var(--ifm-color-primary);
  text-align: left;
  white-space: normal;
  word-wrap: break-word;
}

.n4c-logo {
  margin-top: -5;
  padding: 0 ;
}


/********** Links ************/


a {
  font-weight: bold;
}



a.button.button--primary:not(.button--outline):hover {
  color: white;
  text-decoration: unset;
}

a.button.button--secondary:not(.button--outline):hover,
a.button.button--negative:not(.button--outline):hover {
  color: var(--ifm-color-primary);
  text-decoration: unset;
}

a:not([href]) {
    text-decoration: none;
}

p,
.markdown>p,
.markdown>pre,
.markdown>ul {
 margin-bottom:var(--ifm-leading);
 text-align: justify;
}

.menu__link {
  font-weight: unset;
}
/* ... */

